# ai_back

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  creat_token.py  data.json
ai_back/: Cargo.toml
rai/: Cargo.toml
rai/data/: chat.json
rai/src/: lib.rs  main.rs
rai/src/ai/: gpt.rs  mod.rs
rai/src/local_data/: data.rs
rai/src/process/: chat_chat.rs  mod.rs
src/: creat_key.rs  lib.rs  main.rs
src/ai/: mod.rs  response_type.rs
src/argument/: arg_type.rs  mod.rs
src/const_var/: mod.rs
src/local_data/: config.rs  mod.rs
src/process/: chat_chat.rs  json.rs  mod.rs
